tests/errors/can_only_be_used_inside_async.n
async fn foo() -> int {
    return 1;
}

fn main() {
    x := await foo();
}
